--- a/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/templates/index.liquid
+++ b/STOREFRONT/VirtoCommerce.Storefront/App_Data/Themes/Babywise/Babywise/templates/index.liquid
@@ -1,6 +1,7 @@
 {% include 'body/heroarea' %} 
 <div class="content-container">
 {% include 'body/mommybuzz' %} 
+{% include 'body/bookpromo' %} 
 {% include 'body/sleeptalk' %} 
 {% include 'body/featuredvideo' %} 
 {% include 'body/emailsignup' %} 
